--- a/package.json
+++ b/package.json
@@ -10,17 +10,28 @@
     "@types/node": "^16.11.24",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "lint-staged": "^12.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "yarn lint",
+      "yarn prettier"
+    ]
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test --watchAll=false",
+    "eject": "react-scripts eject",
+    "postinstall": "husky install",
+    "prettier": "prettier --write . --ignore-unknown",
+    "type-check": "tsc --pretty --noEmit",
+    "lint": "eslint . --max-warnings 0"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +50,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "husky": "^7.0.0",
+    "prettier": "^2.5.1"
   }
 }
