--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.5",
-    "web-vitals": "^2.1.4",
-    "zustand": "^3.7.0"
+    "web-vitals": "^2.1.4"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
