--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^7.0.2",
     "husky": "^7.0.0",
     "prettier": "^2.5.1"
   }
